# ai-eng-sto-learnings-legal-agents

./: .dockerignore  .env.example  AI_ENG_STO_LLA.ipynb  Dockerfile  README.md  agents.py  models.py  prompts.py  pyproject.toml  utils.py
.devcontainer/: devcontainer.json
data/: complex_nda.md  nda_policy.md  sample_nda.md
