[tool.poetry]
name = "ai-eng-sto-learnings-legal-agents"
version = "0.1.0"
description = "Presentation and code for AI Engineering STO 23/4-25"
authors = ["Marcus Elwin <marcus@elwin.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.24"
pydantic-ai = "^0.1.3"
langchain-openai = "^0.3.14"
langchain-core = "^0.3.55"
pydantic = "^2.11.3"
jupyter = "^1.1.1"
python-dotenv = "^1.1.0"
jupytext = "^1.17.0"
devtools = "^0.12.2"
nest-asyncio = "^1.6.0"
langchain-google-genai = "^2.1.3"
langchain-google-vertexai = "^2.0.20"
openai = "^1.75.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
